--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "version": "1.0.0",
     "license": "MIT",
     "engines": {
-        "node": ">=8.0.0"
+        "node": ">=10.8.0"
     },
     "author": "Josep Mateu Clemente <jmateu.clemente@gmail.com>",
     "scripts": {
         "webdriver-manager": "webdriver-manager",
-        "postinstall": "npm run webdriver-manager -- update",
+        "postinstall": "npm run webdriver-manager -- update --gecko=false",
         "protractor": "protractor",
         "test": "npm run protractor -- protractor.conf.travis.js"
     },
