--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ cache:
 before_install:
   - START_TIME=$(date +%s)
   - "export DISPLAY=:99.0"
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x16"
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.7.0
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1080x24+32"
+  - |
+    export RECORDED_FILE="$(pwd)/recorded.mp4"
+    coproc ffmpeg -f x11grab -video_size 1920x1080 -i :0 -codec:v libx264 -r 60 "$RECORDED_FILE" &
+    export COPR=$COPROC
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s --
   - export PATH="$HOME/.yarn/bin:$PATH"
 
 install: yarn
@@ -25,18 +29,28 @@ before_script:
     fi
   - |
     if [ "${METAMASK_NETWORK:0:1}" = "l" ]; then
+      PROJECT_PATH="$(pwd)"
+      MIGRATION_LOG="$PROJECT_PATH/migration.log"
+      export GANACHE_LOG="$PROJECT_PATH/ganache.log"
+      GANACHE_DB="/tmp/ganache.db"
+      export GANACHE_PORT=8080
+      export GANACHE_GAS=9000000
       git clone --depth=1 --branch=master https://github.com/PolymathNetwork/polymath-core.git polymath-core
       cd polymath-core
       nvm install v8
       npm install -g truffle
       npm install
-      ganache-cli -i $GANACHE_NETWORK -l 9000000 -m "$METAMASK_SECRET" > ../ganache.log &
+      rm -rf "$GANACHE_DB"
+      mkdir -p "$GANACHE_DB"
+      perl -0777 -pe "s/(development: {[^}]*})/development: { host: 'localhost', network_id: '$GANACHE_NETWORK', port: $GANACHE_PORT, gas: $GANACHE_GAS }/" -i truffle.js
+      ganache-cli -e 100000 -i $GANACHE_NETWORK -l $GANACHE_GAS --db "$GANACHE_DB" -p $GANACHE_PORT -m "$METAMASK_SECRET" &> "$GANACHE_LOG" &
       GANACHE_PID=$!
-      sh -c 'tail -n +0 -f ../ganache.log | { sed "/Listening on/ q" && kill $$ ;}'
-      export GANACHE_CONTRACTS="{"$(truffle migrate --reset --all --network development | tee migration.log | sed  -e "1,/^Using network \'.*\'.$/ d; /----- Polymath Core Contracts -----/,\$d; /^[^:]*$/ d; /^.*\.js$/ d; s/^ *\([^:]*\): *\([^ ]*\) *$/ \"\1\" : { \"$GANACHE_NETWORK\" : \"\2\" }/g" | tr '\n' ', ' | sed 's/,$//')" }"
-      cat migration.log
+      while [ ! -f "$GANACHE_LOG" ]; do sleep 1 ; done
+      sh -c 'tail -n +0 -f "$GANACHE_LOG" | { sed "/Listening on/ q" && kill $$ ;}'
+      export GANACHE_CONTRACTS="{"$(truffle migrate --reset --all --network development | tee "$MIGRATION_LOG" | sed  -e "1,/^Using network \'.*\'.$/ d; /----- Polymath Core Contracts -----/,\$d; /^[^:]*$/ d; /^.*\.js$/ d; s/^ *\([^:]*\): *\([^ ]*\) *$/ \"\1\" : { \"$GANACHE_NETWORK\" : \"\2\" }/g" | tr '\n' ', ' | sed 's/,$//')" }"
+      cat "$MIGRATION_LOG"
       nvm use v10
-      cd ..
+      cd "$PROJECT_PATH"
     fi
 
 script: npm test -- --env=production --params.tags=@status
@@ -45,8 +59,11 @@ after_script:
   - |
     if [ "${GANACHE_PID+x}" ]; then
       kill -9 $GANACHE_PID
-      cat ganache.log
+      cat "$GANACHE_LOG"
     fi
+  - |
+    echo 'q' >&"${COPR[1]}"
+    # Upload video somewhere
   - |
     END_TIME=$(date +%s)
     ELAPSED=$(($END_TIME - $START_TIME))
