--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,17 +12,48 @@
             "args": [
                 "${workspaceFolder}/protractor.conf.js",
                 "--troubleshoot",
+                //"--params.tags=@sanity or @status",
+                //"--params.tags=@sanity",
                 "--params.browser=puppeteer",
-                "--params.extensions=metamask"
+                //"--params.setup.ganache",
+                //"--params.setup.issuer='polymath-issuer'",
+                //"--params.browser=cloud",
+                //"--params.browser=chrome",
+                //"--params.extensions=metamask"
             ],
             // Define here your environment variables (e.g. metamask secret & password)
             "envFile": "${workspaceFolder}/.env",
             "console": "integratedTerminal",
+            "runtimeVersion": "default",
             "stopOnEntry": false,
             "skipFiles": [
                 "node_modules/**/*",
                 "<node_internals>/**/*"
-            ]
+            ],
+            "env": {
+                "IS_DEBUG": "true"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Parse Ganache",
+            "program": "${workspaceFolder}/parse",
+            "args": [
+                "/Users/pasztet/Workspace/polymath-issuer/node_modules/polymath-core/blah.txt",
+            ],
+            // Define here your environment variables (e.g. metamask secret & password)
+            "envFile": "${workspaceFolder}/.env",
+            "console": "integratedTerminal",
+            "runtimeVersion": "default",
+            "stopOnEntry": false,
+            "skipFiles": [
+                "node_modules/**/*",
+                "<node_internals>/**/*"
+            ],
+            "env": {
+                "IS_DEBUG": "true"
+            }
         }
     ]
 }
