--- a/.travis.yml
+++ b/.travis.yml
@@ -22,45 +22,13 @@ install: yarn
 
 before_script:
   - |
-    if [ -z "${METAMASK_NETWORK+x}" ]; then
-      export METAMASK_SECRET="cotton trap squeeze wealth aunt fork hungry notice entry early combine chalk"
-      export METAMASK_NETWORK=l
-      export GANACHE_NETWORK=100000015
-    fi
-  - |
-    if [ "${METAMASK_NETWORK:0:1}" = "l" ]; then
-      PROJECT_PATH="$(pwd)"
-      MIGRATION_LOG="$PROJECT_PATH/migration.log"
-      export GANACHE_LOG="$PROJECT_PATH/ganache.log"
-      GANACHE_DB="/tmp/ganache.db"
-      export GANACHE_PORT=8080
-      export GANACHE_GAS=9000000
-      git clone --depth=1 --branch=master https://github.com/PolymathNetwork/polymath-core.git polymath-core
-      cd polymath-core
-      nvm install v8
-      npm install -g truffle
-      npm install
-      rm -rf "$GANACHE_DB"
-      mkdir -p "$GANACHE_DB"
-      perl -0777 -pe "s/(development: {[^}]*})/development: { host: 'localhost', network_id: '$GANACHE_NETWORK', port: $GANACHE_PORT, gas: $GANACHE_GAS }/" -i truffle.js
-      ganache-cli -e 100000 -i $GANACHE_NETWORK -l $GANACHE_GAS --db "$GANACHE_DB" -p $GANACHE_PORT -m "$METAMASK_SECRET" &> "$GANACHE_LOG" &
-      GANACHE_PID=$!
-      while [ ! -f "$GANACHE_LOG" ]; do sleep 1 ; done
-      sh -c 'tail -n +0 -f "$GANACHE_LOG" | { sed "/Listening on/ q" && kill $$ ;}'
-      export GANACHE_CONTRACTS="{"$(truffle migrate --reset --all --network development | tee "$MIGRATION_LOG" | sed  -e "1,/^Using network \'.*\'.$/ d; /----- Polymath Core Contracts -----/,\$d; /^[^:]*$/ d; /^.*\.js$/ d; s/^ *\([^:]*\): *\([^ ]*\) *$/ \"\1\" : { \"$GANACHE_NETWORK\" : \"\2\" }/g" | tr '\n' ', ' | sed 's/,$//')" }"
-      cat "$MIGRATION_LOG"
-      nvm use v10
-      cd "$PROJECT_PATH"
+    if [[ "${METAMASK_NETWORK:0:1}" = "l"  ]] || [[ -z "${METAMASK_NETWORK+x}" ]]; then
+      ARGS="$ARGS --params.setup.ganache=true"
     fi
 
-script: npm test -- --env=production --params.tags=@status
+script: npm test -- --env=production --params.tags=@status $ARGS
 
 after_script:
-  - |
-    if [ "${GANACHE_PID+x}" ]; then
-      kill -9 $GANACHE_PID
-      cat "$GANACHE_LOG"
-    fi
   - |
     echo 'q' >&"${COPR[1]}"
     # Upload video somewhere
