--- a/package.json
+++ b/package.json
@@ -19,20 +19,22 @@
         "@types/chai-as-promised": "7.1.0",
         "@types/chance": "^0.7.35",
         "@types/cheerio": "^0.22.8",
+        "@types/circular-json": "^0.4.0",
         "@types/clone": "^0.1.30",
         "@types/csvtojson": "^1.1.5",
         "@types/cucumber": "^4.0.4",
         "@types/deasync": "^0.1.0",
         "@types/extend": "^2.0.30",
+        "@types/fs-extra": "^5.0.4",
         "@types/glob": "^5.0.35",
         "@types/gm": "^1.17.32",
         "@types/imap-simple": "^3.1.1",
         "@types/mailparser": "^2.0.2",
+        "@types/mongoose": "^5.2.7",
         "@types/node-rsa": "^0.4.3",
         "@types/puppeteer": "^0.13.9",
         "@types/request": "^2.47.1",
         "@types/request-promise-native": "^1.0.15",
-        "@types/rimraf": "^2.0.2",
         "@types/tmp": "0.0.33",
         "@types/unzipper": "^0.8.4",
         "@types/yargs": "^11.1.1",
@@ -42,6 +44,7 @@
         "chai-as-promised": "^7.1.1",
         "chance": "^1.0.11",
         "cheerio": "^1.0.0-rc.2",
+        "circular-json": "^0.5.5",
         "clone": "^2.1.1",
         "crx": "git+https://github.com/oncletom/crx.git",
         "csvtojson": "^2.0.8",
@@ -50,12 +53,15 @@
         "cucumber-tsflow": "^2.2.0",
         "deasync": "^0.1.10",
         "extend": "^3.0.1",
+        "fs-extra": "^7.0.0",
         "glob": "^7.1.2",
         "gm": "^1.23.0",
+        "google-spreadsheet": "^2.0.5",
         "imap-simple": "^4.1.0",
         "mailparser": "^2.3.2",
         "mime-types": "^2.1.17",
         "moment": "^2.18.1",
+        "mongoose": "^5.2.9",
         "node-rsa": "^1.0.1",
         "parse-domain": "^1.2.0",
         "protractor-cucumber-framework": "^6.0.0",
@@ -67,11 +73,11 @@
         "reflect-metadata": "^0.1.10",
         "request": "^2.87.0",
         "request-promise-native": "^1.0.5",
-        "rimraf": "^2.6.2",
         "stack-trace": "0.0.10",
         "striptags": "^3.1.0",
         "tmp": "0.0.33",
         "to-title-case": "^1.0.0",
+        "tree-kill": "^1.2.0",
         "ts-node": "^7.0.0",
         "tsconfig-paths": "^3.5.0",
         "typescript": "^2.9.2",
