--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/glob": "^5.0.35",
         "@types/gm": "^1.17.32",
         "@types/imap-simple": "^3.1.1",
+        "@types/istanbul-lib-coverage": "^1.1.0",
         "@types/mailparser": "^2.0.2",
         "@types/mongoose": "^5.2.7",
         "@types/node-rsa": "^0.4.3",
@@ -58,11 +59,15 @@
         "gm": "^1.23.0",
         "google-spreadsheet": "^2.0.5",
         "imap-simple": "^4.1.0",
+        "istanbul-api": "^2.0.6",
+        "istanbul-lib-coverage": "^2.0.1",
         "mailparser": "^2.3.2",
         "mime-types": "^2.1.17",
         "moment": "^2.18.1",
         "mongoose": "^5.2.9",
+        "node": "8",
         "node-rsa": "^1.0.1",
+        "npm": "^6.4.1",
         "parse-domain": "^1.2.0",
         "protractor-cucumber-framework": "^6.0.0",
         "protractor-perf": "^0.2.3",
@@ -73,8 +78,10 @@
         "reflect-metadata": "^0.1.10",
         "request": "^2.87.0",
         "request-promise-native": "^1.0.5",
+        "serve": "^10.0.2",
         "stack-trace": "0.0.10",
         "striptags": "^3.1.0",
+        "tar-fs": "^1.16.3",
         "tmp": "0.0.33",
         "to-title-case": "^1.0.0",
         "tree-kill": "^1.2.0",
@@ -83,6 +90,7 @@
         "typescript": "^2.9.2",
         "unzipper": "^0.9.2",
         "vanity-eth": "^1.1.0",
-        "yargs": "^12.0.1"
+        "yargs": "^12.0.1",
+        "yarn": "^1.10.1"
     }
 }
