--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "webdriver-manager": "webdriver-manager",
         "postinstall": "npm run webdriver-manager -- update --gecko=false",
         "protractor": "protractor",
-        "test": "npm run protractor -- protractor.conf.travis.js"
+        "test": "npm run protractor -- protractor.conf.ci.js"
     },
     "dependencies": {
         "@josepmc/protractor": "^5.4.0-1",
