--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "cucumberautocomplete.steps": [
-        "tests/**/*.ts",
-    ],
-    "cucumberautocomplete.syncfeatures": "tests/**/*.feature",
-    "cucumberautocomplete.strictGherkinCompletion": true,
-    "editor.formatOnSave": true
+  "cucumberautocomplete.steps": [
+    "tests/**/*.ts"
+  ],
+  "cucumberautocomplete.syncfeatures": "tests/**/*.feature",
+  "cucumberautocomplete.strictGherkinCompletion": true,
+  "editor.formatOnSave": true
 }
