--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
             "lib": [
                 "node_modules/@josepmc/protractor",
                 "lib"
+            ],
+            "mongo-prebuilt": [
+                "node_modules/@josepmc/mongo-prebuilt"
             ]
         },
         "types": [
