--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "author": "Josep Mateu Clemente <jmateu.clemente@gmail.com>",
     "scripts": {
         "webdriver-manager": "webdriver-manager",
-        "postinstall": "npm run webdriver-manager -- update --gecko=false",
+        "postinstall": "npm run webdriver-manager -- update --gecko=false && node_modules/.bin/mongodb-download --downloadDir=mongo",
         "protractor": "protractor",
-        "test": "npm run protractor -- protractor.conf.ci.js"
+        "test": "npm run protractor -- protractor.conf.ci.js",
+        "docker": "node docker.js"
     },
     "dependencies": {
+        "@josepmc/mongodb-prebuilt": "^6.3.5",
         "@josepmc/protractor": "^5.4.0-1",
         "@types/chai": "^4.0.4",
         "@types/chai-as-promised": "7.1.0",
