--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
         "strict": false,
+        "noEmit": true,
         "moduleResolution": "node",
         "baseUrl": ".",
         "typeRoots": [
