--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/csvtojson": "^1.1.5",
         "@types/cucumber": "^4.0.4",
         "@types/deasync": "^0.1.0",
+        "@types/dotenv": "^6.1.0",
         "@types/extend": "^3.0.0",
         "@types/fs-extra": "^5.0.4",
         "@types/glob": "^7.1.1",
@@ -55,6 +56,7 @@
         "cucumber-pretty": "^1.5.0",
         "cucumber-tsflow": "^3.2.0",
         "deasync": "^0.1.14",
+        "dotenv": "^6.2.0",
         "extend": "^3.0.1",
         "fs-extra": "^7.0.1",
         "glob": "^7.1.3",
@@ -67,7 +69,6 @@
         "mime-types": "^2.1.21",
         "moment": "^2.18.1",
         "mongoose": "^5.3.15",
-        "node": "8",
         "node-rsa": "^1.0.1",
         "npm": "^6.4.1",
         "parse-domain": "^2.1.7",
@@ -92,7 +93,6 @@
         "typescript": "^3.2.1",
         "unzipper": "^0.9.4",
         "vanity-eth": "^1.2.0",
-        "yargs": "^12.0.5",
-        "yarn": "^1.12.3"
+        "yargs": "^12.0.5"
     }
 }
