--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "deasync": "^0.1.14",
         "dotenv": "^6.2.0",
         "extend": "^3.0.1",
+        "find-process": "^1.2.1",
         "fs-extra": "^7.0.1",
         "glob": "^7.1.3",
         "gm": "^1.23.0",
